@@ -98,7 +98,8 @@ applyOverlayConfig() {
   # Overlay relative to the root of the install dir
   if [ -d "${OPENNMS_OVERLAY}" ] && [ -n "$(ls -A ${OPENNMS_OVERLAY})" ]; then
     echo "Apply custom configuration from ${OPENNMS_OVERLAY}."
-    cp -r ${OPENNMS_OVERLAY}/* ${OPENNMS_HOME}/ || exit ${E_INIT_CONFIG}
+    # Use rsync so that we can overlay files into directories that are symlinked
+    rsync -K -a ${OPENNMS_OVERLAY}/* ${OPENNMS_HOME}/ || exit ${E_INIT_CONFIG}
   else
     echo "No custom config found in ${OPENNMS_OVERLAY}. Use default configuration."
   fi
@@ -133,16 +134,18 @@ applyKarafDebugLogging() {
 
 # Start opennms in foreground
 start() {
-  local OPENNMS_JAVA_OPTS="-Djava.endorsed.dirs=/opt/opennms/lib/endorsed \
-  -Dopennms.home=/opt/opennms \
-  -Dcom.sun.management.jmxremote.authenticate=true \
-  -Dcom.sun.management.jmxremote.login.config=opennms \
-  -Dcom.sun.management.jmxremote.access.file=/opt/opennms/etc/jmxremote.access \
-  -DisThreadContextMapInheritable=true \
-  -Dgroovy.use.classvalue=true \
-  -Djava.io.tmpdir=/opt/opennms/data/tmp \
-  -XX:+HeapDumpOnOutOfMemoryError"
-  exec java ${OPENNMS_JAVA_OPTS} ${JAVA_OPTS} -jar /opt/opennms/lib/opennms_bootstrap.jar start
+  local OPENNMS_JAVA_OPTS="--add-modules=java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.management.rmi,java.naming,java.prefs,java.rmi,java.scripting,java.security.jgss,java.security.sasl,java.sql,java.sql.rowset,java.xml,jdk.attach,jdk.httpserver,jdk.jdi,jdk.sctp,jdk.security.auth,jdk.xml.dom \
+  -Dorg.apache.jasper.compiler.disablejsr199=true
+  -Dopennms.home=/opt/opennms
+  -XX:+HeapDumpOnOutOfMemoryError
+  -Dcom.sun.management.jmxremote.authenticate=true
+  -Dcom.sun.management.jmxremote.login.config=opennms
+  -Dcom.sun.management.jmxremote.access.file=/opt/opennms/etc/jmxremote.access
+  -DisThreadContextMapInheritable=true
+  -Dgroovy.use.classvalue=true
+  -Djava.io.tmpdir=/opt/opennms/data/tmp
+  -XX:+StartAttachListener"
+  exec ${JAVA_HOME}/bin/java ${OPENNMS_JAVA_OPTS} ${JAVA_OPTS} -jar /opt/opennms/lib/opennms_bootstrap.jar start
 }
 
 testConfig() {
